# imfp

./: .gitignore  News  README.ipynb  README.md  build-workflow.txt  index.rst  pyproject.toml  requirements.txt  setup.py
.github/workflow/: actions.yaml  imfp.yaml
.github/workflows/: actions.yml  dev.yml  main.yml
IMF_DBs_Scraper/IMFP_Data/: imf_datamanipulator.py  imf_main.py
IMF_DBs_Scraper/scraper/: SCRAPER.md  chrome_scraper.py  ckan_schema.py  data_cleaner.py  firefox_scraper.py  logger.py  scraper.py
README_files/: render.py
experimental/: download_databases.py  download_indicators.py
imfp/: __init__.py  admin.py  data.py  utils.py
scripts/: __init__.py  admin_functions.py  data_functions.py  utils.py
tests/: test_admin.py  test_admin_functions.py  test_data.py  test_data_functions.py  test_utils.py
