[tool.poetry]
name = "imfp"
version = "1.1.1"
description = "Python package for downloading economic data from the International Monetary Fund JSON RESTful API endpoint."
authors = ["Christopher C. Smith <chriscarrollsmith@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chriscarrollsmith/imfp"
repository = "https://github.com/chriscarrollsmith/imfp"
keywords = ["economics", "finance", "IMF", "API"]
classifiers = [
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
  { include = "imfp" },
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
responses = "^0.23.1"
pytest = "^7.2.2"
pytest-runner = "^6.0.0"
black = ">=23.3,<25.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"